Doc: Completes documentation to all endpoints made so far
